--- a/package.json
+++ b/package.json
@@ -5,25 +5,26 @@
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc && ncc build lib/main.js && sed -i 's/\\x0D$//' ./dist/index.js",
+    "package": "tsc && ncc build -s -m lib/main.js --license licenses.txt",
     "format": "prettier --write \"**/*.ts\"",
     "format-check": "prettier --check \"**/*.ts\"",
     "test": "jest"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pbrisbin/setup-tool-action.git"
+    "url": "git+https://github.com/infovista-opensource/setup-tool-action.git"
   },
   "author": "Patrick Brisbin <pbrisbin@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.6.0",
+    "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
-    "@actions/tool-cache": "^1.7.2"
+    "@actions/tool-cache": "^2.0.1"
   },
   "devDependencies": {
     "@types/jest": "^29.2.4",
     "@types/node": "^17.0.23",
-    "@vercel/ncc": "^0.33.3",
+    "@vercel/ncc": "^0.36.1",
     "jest": "^29.3.1",
     "prettier": "^2.8.0",
     "ts-jest": "^29.0.3",
