--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pbrisbin/setup-tool-action",
+  "name": "@infovista-opensource/setup-tool-action",
   "version": "0.0.0",
   "description": "",
   "main": "lib/main.js",
@@ -14,17 +14,17 @@
     "type": "git",
     "url": "git+https://github.com/infovista-opensource/setup-tool-action.git"
   },
-  "author": "Patrick Brisbin <pbrisbin@gmail.com>",
+  "author": "Daniele Franceschi <daniele.franceschi@infovista.com>",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.10.0",
-    "@actions/github": "^5.1.1",
+    "@actions/core": "^1.10.1",
+    "@actions/github": "^6.0.0",
     "@actions/tool-cache": "^2.0.1"
   },
   "devDependencies": {
     "@types/jest": "^29.2.4",
     "@types/node": "^17.0.23",
-    "@vercel/ncc": "^0.36.1",
+    "@vercel/ncc": "^0.38.1",
     "jest": "^29.3.1",
     "prettier": "^2.8.0",
     "ts-jest": "^29.0.3",
