add dir cleanup

--- a/action.yml
+++ b/action.yml
@@ -91,6 +91,7 @@ outputs: {}
 runs:
   using: "node16"
   main: "dist/index.js"
+  post: "dist/index.js"
 branding:
   icon: "arrow-down-circle"
   color: blue
